--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,10 +10,10 @@
 
 
     <div class="icontext">
-      <%#= link_to cookbook_path(current_user), class:"text-footer" do %>
+      <%= link_to cookbook_path(current_user), class:"text-footer" do %>
         <%= image_tag "open-book.png", alt: "Le Wagon", width: 40 %>
         <p>Cookbook</p>
-      <%# end %>
+      <% end %>
     </div>
 
     <div class="icontext">
@@ -25,7 +25,3 @@
 
   </div>
 </div>
-
-   <%= link_to root_path do %>
-      <%= image_tag "refrigerateur.png", alt: "Le Wagon", width: 40 %>
-    <% end %>
