--- a/app/assets/stylesheets/components/_recipe_card.scss
+++ b/app/assets/stylesheets/components/_recipe_card.scss
@@ -64,3 +64,16 @@
 //   line-height: normal;
 //   padding-left: 24px;
 // }
+
+.title_layout_recipes {
+  font-weight: bold;
+}
+
+.plus_recipes_card {
+  border-radius: 50%;
+  width: 10px;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 15px;
+}
