--- a/app/assets/stylesheets/components/_ingredient_card.scss
+++ b/app/assets/stylesheets/components/_ingredient_card.scss
@@ -1,6 +1,6 @@
 .card_design {
   display: flex;
-  width: 339px;
+  width: 100%;
   height: 115px;
   flex-shrink: 0;
   border-radius: 8px;
@@ -134,13 +134,9 @@ border: none;
 
 .image-plat {
   width: 100px;
-  height: 100px;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 15px;
-  margin-right: 15px;
+  height: 100%;
+  margin: 8px;
+  flex-shrink: 0;
 }
 
 .plat-image {
