--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="instruction ms-4">
-    <p> Ici vos recettes fovorites... cliquez pour voir les details </p>
+    <p> Ici vos recettes favorites... cliquez pour voir les details </p>
   </div>
 
   <div class="container">
@@ -19,53 +19,54 @@
               <%= image_tag("plat.jpeg", class:"plat-image") %>
           </div>
 
-          <div class="content row ingredient-infos">
-            <%= link_to recipe_path(recipe) do %>
-              <h2><%= recipe.name %></h2>
+          <div class="content row ingredient-infos mx-0">
+            <%= link_to recipe_path(recipe), style: 'color: inherit; text-decoration: none;' do %>
+              <h2 class="recipe-link mb-0"><%= recipe.name %></h2>
             <% end %>
 
-            <% case recipe.difficulty %>
-            <% when 1 %>
-            <div class="div">
-              <%= image_tag("star.png", class:"etoile") %>
+            <div class="difficulty">
+              <% case recipe.difficulty %>
+              <% when 1 %>
+              <div class="div">
+                <%= image_tag("star.png", class:"etoile") %>
+              </div>
+
+              <% when 2 %>
+              <div class="div">
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+              </div>
+
+              <% when 3 %>
+              <div class="div">
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+              </div>
+
+              <% when 4 %>
+              <div class="div">
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+              </div>
+
+              <% when 5 %>
+              <div class="div">
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+                <%= image_tag("star.png", class:"etoile") %>
+              </div>
+
+              <% else %>
+                <p>Dificulté inconnue</p>
+              <% end %>
             </div>
 
-            <% when 2 %>
-            <div class="div">
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-            </div>
-
-            <% when 3 %>
-            <div class="div">
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-            </div>
-
-            <% when 4 %>
-            <div class="div">
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-            </div>
-
-            <% when 5 %>
-            <div class="div">
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-              <%= image_tag("star.png", class:"etoile") %>
-            </div>
-
-            <% else %>
-              <p>Dificulté inconnue</p>
-            <% end %>
-
-
-            <h3><i class="fa-solid fa-clock"></i><%= recipe.preptime  %></h3>
+            <h3 class="mb-0 pt-3"><i class="fa-solid fa-clock"></i><%= recipe.preptime.hour  %> minutes</h3>
           </div>
 
         </div>
