--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -66,7 +66,7 @@
               <% end %>
             </div>
 
-            <h3 class="mb-0 pt-3"><i class="fa-solid fa-clock"></i><%= recipe.preptime.hour  %> minutes</h3>
+            <h3 class="mb-0 pt-3"><i class="fa-solid fa-clock"></i><%= recipe.preptime.hour unless recipe.preptime.nil?  %> minutes</h3>
           </div>
 
         </div>
