--- a/app/assets/stylesheets/components/_ingredient_card.scss
+++ b/app/assets/stylesheets/components/_ingredient_card.scss
@@ -141,6 +141,7 @@ border: none;
 
 .plat-image {
   width: 100%; /* Pour occuper la largeur totale du conteneur */
+  border-radius: 20px;
   // height: auto; /* Pour maintenir le rapport hauteur/largeur et éviter la distorsion */
   // display: block;
 }
