--- a/app/assets/stylesheets/pages/_show_cookbook.scss
+++ b/app/assets/stylesheets/pages/_show_cookbook.scss
@@ -11,6 +11,13 @@
   font-size: 20px;
 }
 
-.difficulty {
+.fa-trash-can {
+  color: black;
+  font-size: 22px;
 
+}
+
+.poubelle {
+  margin-top: 14px;
+  margin-right: 14px;
 }
