--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,8 +29,7 @@ body {
       <div class="fixed-bottom">
       <div class="btnmilieu">
         <div class="buttons-container">
-          <%= link_to "S'inscrire",  new_user_session_path, class:"btnlog" %>
-          <%# <button class="btn-log">S'inscrire</button> %>
+          <%= link_to "S'inscrire",  new_user_registration_path, class:"btnlog" %>
         </div>
       </div>
 
