--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
     <div class="icontext">
       <%= link_to ingredients_path, class:"text-footer" do %>
         <%= image_tag "refrigerateur.png", alt: "Le Wagon", width: 40 %>
-        <p>Mon frigo</p>
+        <p class="mb-1">Mon frigo</p>
       <% end %>
     </div>
 
@@ -12,14 +12,14 @@
     <div class="icontext">
       <%= link_to cookbook_path(current_user), class:"text-footer" do %>
         <%= image_tag "open-book.png", alt: "Le Wagon", width: 40 %>
-        <p>Cookbook</p>
+        <p class="mb-1">Mes recettes</p>
       <% end %>
     </div>
 
     <div class="icontext">
       <%= link_to ingredients_path, class:"text-footer" do %>
         <%= image_tag "rabbit.png", alt: "Le Wagon", width: 40 %>
-        <p>Mon profil</p>
+        <p class="mb-1">Mon profil</p>
       <% end %>
     </div>
 
