--- a/app/assets/stylesheets/components/_template.scss
+++ b/app/assets/stylesheets/components/_template.scss
@@ -1,33 +1,33 @@
-.header {
-  background-color: $orange;
-  height: 50px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  z-index: 999;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
+// .header {
+//   background-color: $orange;
+//   height: 50px;
+//   border-bottom-left-radius: 30px;
+//   border-bottom-right-radius: 30px;
+//   z-index: 999;
+//   position: fixed;
+//   top: 0;
+//   width: 100%;
+// }
 
-.footer {
-  background-color: $orange;
-  height: 60px;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  z-index: 999;
-  justify-content: space-between;
-}
+// .footer {
+//   background-color: $orange;
+//   height: 60px;
+//   border-top-left-radius: 30px;
+//   border-top-right-radius: 30px;
+//   position: fixed;
+//   bottom: 0;
+//   width: 100%;
+//   z-index: 999;
+//   justify-content: space-between;
+// }
 
-.content {
-  // margin-top: 55px;
-  // margin-bottom: 200px;
-}
+// .content {
+//   // margin-top: 55px;
+//   // margin-bottom: 200px;
+// }
 
-.icons-footer {
-  display: flex;
-  justify-content: space-between; /* Ou la largeur souhaitée */
-  height: auto;
-}
+// .icons-footer {
+//   display: flex;
+//   justify-content: space-between; /* Ou la largeur souhaitée */
+//   height: auto;
+// }
