--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -10,12 +10,17 @@
   align-items: start;
   padding-left: 5px;
   display: flex;
+  text-align: center;
 
 }
 
 .titre-carrotte-frigo {
   display: flex;
-  margin-left: 27px;
+}
+
+.header-titre-subtitre {
+  width: 100%;
+  margin-left: 55px;
 }
 
 // .main_btn {
@@ -136,4 +141,62 @@
   border-radius: 25px;
   border: none;
   margin-bottom: 10px;
+}
+
+.instruction {
+  width: 342px;
+  font-size: 25px;
+}
+
+.boutons-rajouter-generer {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.boutons-frigo1 {
+
+  border-radius: 30px;
+  background-color: #F28E19;
+  border: none;
+  color: white;
+  font-family: Manrope;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  align-items: center;
+  text-decoration: none;
+  text-align: center;
+  width: 50%;
+}
+
+.button-create-recipe {
+  text-decoration: none;
+  color: white;
+  border-radius: 30px;
+  background-color: #F28E19;
+  border: none;
+  font-family: Manrope;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  align-items: center;
+  text-align: center;
+  width: 50%;
+}
+
+#boutons-frigo2 {
+  text-decoration: none;
+  color: white;
+}
+
+.fa-heart {
+  color: rgb(247, 72, 72);
+  text-decoration: none;
+  font-size: 22px;
+  justify-content: space-between;
+}
+
+.like {
+
 }
