--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,44 @@
-<h2>Sign up</h2>
+<style>
+body {
+  background-color: #F28E19;
+  min-height: 100vh;
+}
+</style>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="se-connecter-form">
+        <h2 class= "mt-4 se-connecter-titre">S'inscrire</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
+
+          <div class="form-inputs">
+            <%= f.input :email,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "hello@savetecarrot.com" },
+                        label: "Email"%>
+            <%= f.input :password,
+                        required: true,
+                        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                        input_html: { autocomplete: "mot de passe" },
+                        label: "Mot de passe" %>
+            <%= f.input :password_confirmation,
+                        required: true,
+                        input_html: { autocomplete: "mot de passe" },
+                        label: "Confirmation mot de passe" %>
+          </div>
+
+          <div class="form-actions">
+            <%= f.button :submit, "Se inscrire", id: "se-connecter-bouton" %>
+          </div>
+        <% end %>
+
+        <%= link_to "Se connecter", new_session_path(resource_name), class: "link-se-connecter my-5 mx-2"%>
+        <%#= render "devise/shared/links"%>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
