--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,11 +1,26 @@
+
+
 <div class="main-container mt-4">
-  <div class = "titre-carrotte-frigo">
-    <%= image_tag("logo.png", class: "petite-carrote") %>
-    <h1 class="title-frigo">FRIGO</h1>
+  <div class="header-titre-subtitre">
+    <div class = "titre-carrotte-frigo">
+      <%= image_tag("logo.png", class: "petite-carrote") %>
+      <h1 class="title-frigo">FRIGO</h1>
+    </div>
+
+    <div class="instruction">
+      <p class="m-0"> Oh ! Votre frigo est bien rempli !</p>
+    </div>
   </div>
 
-  <div class="instruction ms-4">
-    <p> Oh ! Votre frigo est bien rempli !</p>
+  <div class="boutons-rajouter-generer mx-4 my-3">
+    <!-- Button trigger modal -->
+    <button type="button" class="boutons-frigo1 p-0 me-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Générer une recette
+    </button>
+
+    <div class="button-create-recipe ms-1">
+      <%= link_to "Rajouter un produit", new_ingredient_path, id:"boutons-frigo2"%>
+    </div>
   </div>
 
   <div class="container">
@@ -33,17 +48,13 @@
     </div>
   </div>
 
-  <!-- Button trigger modal -->
-  <button type="button" class="main-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Générer une recette
-  </button>
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content bg-warning-subtle">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel"> <strong> Mes filtres</strong></h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel"> <strong> Personnaliser ma recette </strong></h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -57,7 +68,4 @@
     </div>
   </div>
 
-  <div class="button-create-recipe">
-    <%= link_to "Rajouter un produit", new_ingredient_path %>
-  </div>
 </div>
