corrections front btn +  police + layout

--- a/app/assets/stylesheets/components/_ingredient_form.scss
+++ b/app/assets/stylesheets/components/_ingredient_form.scss
@@ -1,7 +1,5 @@
 .form-title {
   color: #000;
-  margin-left: 30px;
-  padding-top: 150px;
   font-family: Manrope;
   font-size: 30px;
   font-style: normal;
@@ -57,7 +55,7 @@
   padding-top: 30px;
   text-align: left;
   font-family: Manrope;
-  font-size: 10px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
@@ -151,7 +149,6 @@
 .ingredient-date {
   border: none;
   margin-top: 10px;
-  padding-top: 30px;
   padding-right: 30px;
   margin-left: 10px;
   width: 175px;
@@ -167,15 +164,28 @@
 }
 
 .submit-button {
-  border: none;
-  margin-top: 50px;
-  padding-top: 30px;
-  width: 339px;
-  height: 75px;
-  border-radius: 16px;
   flex-shrink: 0;
   background-color: rgba(251, 221, 186, 0.95);
   font-family: Manrope;
-  font-weight: 800;
-  word-wrap: break-word;
+  margin-top: 20px;
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  border-top-right-radius: 40px;
+  border-top-left-radius: 90px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 90px;
+  width: 280px; /* Ajustez la largeur souhaitée */
+  display: inline-block; /* Pour permettre le réglage de la largeur */
+  text-align: center; /* Pour centrer le texte horizontalement */
+  box-sizing: border-box; /* Inclure le padding dans la largeur totale */
+  margin: 0 5px;
+  height: 75px;
+  border: none;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.add-btn {
+  margin-top: 30px;
 }
