--- a/app/assets/stylesheets/components/_recipe_card.scss
+++ b/app/assets/stylesheets/components/_recipe_card.scss
@@ -34,11 +34,10 @@
 //   // margin-top: -5px;
 // }
 
-// .title_layout {
-//   font-family: Manrope;
-//   font-size: 22px;
-
-// }
+.title_layout {
+  font-family: Manrope;
+  font-size: 20px;
+}
 
 // .time_difficulty_layout {
 //   display: flex;
