--- a/app/assets/stylesheets/pages/_show_cookbook.scss
+++ b/app/assets/stylesheets/pages/_show_cookbook.scss
@@ -21,3 +21,13 @@
   margin-top: 14px;
   margin-right: 14px;
 }
+
+.main-container {
+  font-family: Manrope;
+  min-height: fit-content;
+}
+
+.instruction {
+  font-size: 20px;
+  font-weight: 800;
+}
