--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -1,14 +1,14 @@
 <div class="main-container mt-4">
     <div class="header-titre-subtitre">
-    <div class = "titre-carrotte-frigo">
-      <%= image_tag("logo.png", class: "petite-carrote") %>
-      <h1 class="title-frigo">MES RECETTES</h1>
-    </div>
+      <div class = "titre-carrotte-frigo">
+        <%= image_tag("logo.png", class: "petite-carrote") %>
+        <h1 class="title-frigo">MES RECETTES</h1>
+      </div>
 
-    <div class="instruction">
-      <p class="mb-3">Ici vos recettes favorites... cliquez pour voir les details</p>
+      <div class="instruction">
+        <p class="mb-3">Ici vos recettes favorites... cliquez pour voir les détails</p>
+      </div>
     </div>
-  </div>
 
 
   <div class="container">
@@ -86,4 +86,3 @@
     </div>
   </div>
 </div>
-
