--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -14,7 +14,7 @@ body {
 
       <div class="quick-infos">
         <div class="preparation-card">
-          <p>Preparatio</p>
+          <p>Preparation</p>
         </div>
 
         <div class="cuisson-card">
