--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,13 +2,13 @@
   background-color: $orange;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  bottom: 0;
-  left: 0; /* Pour occuper toute la largeur de l'écran */
-  right: 0; /* Pour occuper toute la largeur de l'écran */
   width: 100%;
   z-index: 999;
-  justify-content: space-between;
   position: sticky;
+  bottom: 0 !important;
+  left: 0; /* Pour occuper toute la largeur de l'écran */
+  right: 0;
+  margin-top: 50vh;
 }
 
 .icons-footer {
@@ -30,6 +30,8 @@
   color: white;
   text-decoration: none;
   font-size: 20px;
+  font-family: Manrope;
+  font-weight: bold;
 }
 
 .icontext {
