--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,5 +6,19 @@
 @import "recipe_card";
 @import "btn";
 
+.delete_button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
 
+.fa-trash-can {
+  color: black;
+  font-size: 22px;
+}
 
+.poubelle {
+  margin-top: 14px;
+  margin-right: 14px;
+}
