--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@ body {
 .titre {
   // height: 40%;
   position: absolute;
-  top: 20px; 
+  top: 20px;
 }
 
 #titre-hp {
@@ -50,6 +50,7 @@ body {
 .btnlog {
   text-decoration: none;
   background-color: white;
+  font-weight: bold;
   color: #F28E19;
   padding: 20px;
   border-top-right-radius: 40px;
