--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="icontext">
-      <%= link_to ingredients_path, class:"text-footer" do %>
+      <%= link_to root_path, class:"text-footer" do %>
         <%= image_tag "rabbit.png", alt: "Le Wagon", width: 40 %>
         <p class="mb-1">Profil</p>
       <% end %>
