--- a/app/assets/stylesheets/components/_ingredient_form.scss
+++ b/app/assets/stylesheets/components/_ingredient_form.scss
@@ -189,3 +189,18 @@
 .add-btn {
   margin-top: 30px;
 }
+
+.loader-overlay {
+  background-color: white;
+  top: 0px;
+  position: absolute;
+  z-index: 1500;
+  width: 110vw;
+  height: 105vh;
+  display: flex;
+  flex-direction: column;
+  /* align-content: space-between; */
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+}
