--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -239,12 +239,34 @@
 }
 
 .fa-heart {
-  color: rgb(247, 72, 72);
+  color: rgb(167, 167, 167);
   text-decoration: none;
   font-size: 22px;
   justify-content: space-between;
 }
 
-.like {
+.fa-heart:active {
+  color: red;
+  transition: color 1s ease-out;
+}
 
+.search-bar-group {
+  width: 339px;
+  display: flex;
+  justify-content: center;
+}
+
+.form {
+font-family: Manrope;
+text-decoration: none;
+color: black;
+}
+
+#query {
+  border: 4px solid rgba(251, 221, 186, 0.95);
+  border-radius: 8px;
+}
+
+.search-bar {
+  width: 100%;
 }
