--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -20,7 +20,7 @@
         <div class="card_design">
 
           <div class="image-plat">
-              <%= image_tag("plat.jpeg", class:"plat-image") %>
+              <%= image_tag(recipe.image_url, class: "plat-image") %>
           </div>
 
           <div class="content row ingredient-infos mx-0">
@@ -86,4 +86,3 @@
     </div>
   </div>
 </div>
-
