--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%= yield %>
 
   <% unless current_page?(root_path)  || current_page?(new_user_session_path) || current_page?(new_user_registration_path)%>
-    <%= render "shared/footer" %>
+    <%= render "shared/footer", class:""%>
   <% end %>
 
   </body>
