--- a/app/assets/stylesheets/components/_ingredient_form.scss
+++ b/app/assets/stylesheets/components/_ingredient_form.scss
@@ -12,24 +12,19 @@
 
 .ingredient-form {
   background-color: rgba(251, 221, 186, 0.95);
-  display: inline-flex;
-  margin-left: 38px;
-  margin-top: 20px;
-  padding-left: 25px;
-  width: 339px;
+  padding: 25px;
   height: 439px;
-  flex-direction: column;
-  flex-shrink: 0;
   border-radius: 16px;
+  align-items: center;
+  height: 480px;
 }
 
 .name-label {
   color: #000;
-  padding-top: 30px;
   margin: 0;
   text-align: left;
   font-family: Manrope;
-  font-size: 20px;
+  font-size: 25px;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
@@ -39,7 +34,6 @@
   border: none;
   display: flex;
   margin-top: 10px;
-  padding-top: 30px;
   width: 291px;
   height: 75px;
   border-radius: 16px;
@@ -49,6 +43,7 @@
   font-family: Manrope;
   font-weight: 800;
   word-wrap: break-word;
+  font-size: 25px;
 }
 
 .quantity-label {
@@ -57,7 +52,7 @@
   padding-top: 30px;
   text-align: left;
   font-family: Manrope;
-  font-size: 10px;
+  font-size: 25px;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
@@ -71,9 +66,6 @@
 }
 
 .quantity-decrement {
-  border: none;
-  display: flex;
-  padding-top: 30px;
   width: 75px;
   height: 75px;
   border-radius: 16px;
@@ -86,15 +78,13 @@
 }
 
 .quantity-decrement img {
-  margin-top: 12px;
-  margin-left: 8px;
+
 }
 
 .quantity-controls button {
   background-color: #FFF8F0;
-  display: flex;
   border: none;
-  padding: 5px 10px;
+  // padding: 5px 10px;
   margin: 0 5px;
   cursor: pointer;
 }
@@ -138,10 +128,11 @@
   padding-top: 30px;
   text-align: left;
   font-family: Manrope;
-  font-size: 20px;
+  font-size: 25px;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
+
 }
 
 .date-controls {
@@ -151,9 +142,6 @@
 .ingredient-date {
   border: none;
   margin-top: 10px;
-  padding-top: 30px;
-  padding-right: 30px;
-  margin-left: 10px;
   width: 175px;
   height: 75px;
   border-radius: 16px;
@@ -164,18 +152,24 @@
   font-family: Manrope;
   font-weight: 800;
   word-wrap: break-word;
+  font-size: 20px;
 }
 
 .submit-button {
+  text-decoration: none;
+  color: white;
+  border-radius: 30px;
+  background-color: #F28E19;
   border: none;
-  margin-top: 50px;
-  padding-top: 30px;
-  width: 339px;
-  height: 75px;
-  border-radius: 16px;
-  flex-shrink: 0;
-  background-color: rgba(251, 221, 186, 0.95);
   font-family: Manrope;
+  font-size: 25px;
+  font-style: normal;
   font-weight: 800;
-  word-wrap: break-word;
+  align-items: center;
+  text-align: center;
+  margin: 10px;
+}
+
+#submit-button {
+  text-decoration: none;
 }
