--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -33,12 +33,15 @@
                 params[:query],
                 class: "form-control",
                 placeholder: "Chercher un ingrédient..."
-            %>
-          <%#= image_submit_tag("canard-search.png", class: "btn-search", alt: "Rechercher") %>
+          %>
+              <button type="submit" class="btn-search">
+              <i class="fa-solid fa-magnifying-glass search-icon"></i>
+
         <% end %>
       </div>
     <%# </div> %>
   </div>
+
 
 <%# END SEARCH--------------------- %>
 
