--- a/app/assets/stylesheets/components/_ingredient_form.scss
+++ b/app/assets/stylesheets/components/_ingredient_form.scss
@@ -11,10 +11,12 @@
 .ingredient-form {
   background-color: rgba(251, 221, 186, 0.95);
   padding: 25px;
-  height: 439px;
   border-radius: 16px;
   align-items: center;
   height: 480px;
+  width: fit-content;
+
+
 }
 
 .name-label {
@@ -28,6 +30,9 @@
   line-height: normal;
 }
 
+input::placeholder {
+  color: #DFDFDF;
+}
 .ingredient-name {
   border: none;
   display: flex;
@@ -50,7 +55,7 @@
   padding-top: 30px;
   text-align: left;
   font-family: Manrope;
-  font-size: 20px;
+  font-size: 25px;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
@@ -63,21 +68,20 @@
   height: 75px;
 }
 
-.quantity-decrement {
+.quantity-decrement-increment {
   width: 75px;
   height: 75px;
-  border-radius: 16px;
+  border-radius: 50px;
   flex-shrink: 0;
-  background-color: #FFF8F0;
+  // background-color: #FFF8F0;
   text-align: center;
   font-family: Manrope;
-  font-weight: 800;
+  font-weight: bold;
   word-wrap: break-word;
-}
-
-.quantity-decrement img {
+  font-size: 47px;
 
 }
+
 
 .quantity-controls button {
   background-color: #FFF8F0;
@@ -90,7 +94,6 @@
 .ingredient-quantity {
   border: none;
   display: flex;
-  padding-top: 30px;
   width: 75px;
   height: 75px;
   border-radius: 16px;
@@ -140,9 +143,7 @@
 .ingredient-date {
   border: none;
   margin-top: 10px;
-  padding-right: 30px;
-  margin-left: 10px;
-  width: 175px;
+  width: 288px;
   height: 75px;
   border-radius: 16px;
   flex-shrink: 0;
@@ -152,7 +153,8 @@
   font-family: Manrope;
   font-weight: 800;
   word-wrap: break-word;
-  font-size: 20px;
+  font-size: 25px;
+  padding: 23px;
 }
 
 .submit-button {
@@ -162,12 +164,11 @@
   margin-top: 20px;
   text-decoration: none;
   color: black;
-  padding: 10px;
   border-top-right-radius: 40px;
   border-top-left-radius: 90px;
   border-bottom-left-radius: 40px;
   border-bottom-right-radius: 90px;
-  width: 280px; /* Ajustez la largeur souhaitée */
+  width: 332px; /* Ajustez la largeur souhaitée */
   display: inline-block; /* Pour permettre le réglage de la largeur */
   text-align: center; /* Pour centrer le texte horizontalement */
   box-sizing: border-box; /* Inclure le padding dans la largeur totale */
@@ -176,6 +177,7 @@
   border: none;
   font-size: 20px;
   font-weight: bold;
+  margin-bottom: 30px;
 }
 
 .add-btn {
@@ -196,3 +198,4 @@
   align-items: center;
   font-weight: 900;
 }
+
