--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,11 +3,16 @@
 
 <style>
 body {
-  background-color: #F28E19;
   min-height: 100vh;
+  background-color: #F28E19;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  background-image: url('home.png');
+  background-size: cover; /* Ajuster la taille pour couvrir toute la zone */
+  background-position: center; /* Centrer l'image horizontalement et verticalement */
+  background-repeat: no-repeat;
+
 }
 </style>
 <%# FIN STYLE--------------------------------------------- %>
